tools/tests/errors/surf_exc_08.ki
# unpacking in a for-loop with a mismatched count is an error
for a, b in [[1, 2, 3]]:
    discard a
